Fix footer on Iphone

--- a/Project_6_belasi/css/media.css
+++ b/Project_6_belasi/css/media.css
@@ -490,4 +490,7 @@
 	.footer .logo {
 		margin-bottom: 30px;
 	}
+	.footer p {
+		padding-bottom: 15px;
+	}
 }
